# teso_vs_procexp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
common/: CMakeLists.txt
common/include/: Logger.h  consts.h  utils.h
common/src/: Logger.cpp  utils.cpp
installer/: installer.nsi
service/: CMakeLists.txt
service/src/: global.cpp  global.h  main.cpp  service.cpp  service.h  watcher.cpp  watcher.h
